--- a/style.css
+++ b/style.css
@@ -42,4 +42,38 @@ h1#page-title img {
   display: block;
   margin: 0 auto;
 }
+.slideshow-container {
+  position: relative;
+  width: 100%;
+  max-height: 600px;
+  overflow: hidden;
+}
+
+.slideshow-slide {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  animation: fade 18s infinite;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.slideshow-slide:nth-child(1) {
+  animation-delay: 0s;
+}
+.slideshow-slide:nth-child(2) {
+  animation-delay: 6s;
+}
+.slideshow-slide:nth-child(3) {
+  animation-delay: 12s;
+}
+
+@keyframes fade {
+  0%   { opacity: 0; }
+  5%   { opacity: 1; }
+  30%  { opacity: 1; }
+  35%  { opacity: 0; }
+  100% { opacity: 0; }
+}
+
 </style>
