--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 :root {
   --page-title-logo-background-image: url("images/logos/cassio-vilacorta-logo.png");
 }
@@ -69,15 +70,9 @@ h1#page-title img {
   transition: opacity 1s ease-in-out;
 }
 
-.slideshow-slide:nth-child(1) {
-  animation-delay: 0s;
-}
-.slideshow-slide:nth-child(2) {
-  animation-delay: 6s;
-}
-.slideshow-slide:nth-child(3) {
-  animation-delay: 12s;
-}
+.slideshow-slide:nth-child(1) { animation-delay: 0s; }
+.slideshow-slide:nth-child(2) { animation-delay: 6s; }
+.slideshow-slide:nth-child(3) { animation-delay: 12s; }
 
 @keyframes fade {
   0%   { opacity: 0; }
@@ -158,7 +153,7 @@ h1#page-title img {
   margin-bottom: 1.5rem;
 }
 
-/* === ÍCONES SOCIAIS (Instagram, YouTube, Spotify) === */
+/* === ÍCONES SOCIAIS === */
 ul.menu-length-3 {
   display: flex;
   justify-content: center;
